tests/files/lexer_tests/should_fail/063.cmdr
// Illegal character in variable name (ascii 30)
myvar = 30;